--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "webpack",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "learn webpack configuration",
+  "private": "true",
   "scripts": {
     "build": "webpack --mode=development"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "webpack",
+    "config"
+  ],
+  "author": "taohongjie",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.20.12",
