--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": "true",
   "scripts": {
     "build": "webpack --mode=development",
-    "watch": "webpack --mode=development --watch"
+    "watch": "webpack --mode=development --watch",
+    "dev": "webpack-dev-server --open"
   },
   "keywords": [
     "webpack",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
