--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "learn webpack configuration",
   "private": "true",
   "scripts": {
-    "build": "webpack --mode=development",
+    "build": "webpack --config webpack.prod.js",
     "watch": "webpack --mode=development --watch",
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --config webpack.dev.js --open"
   },
   "keywords": [
     "webpack",
@@ -22,6 +22,7 @@
     "css-loader": "^6.7.3",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.1",
