--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "glob": "^8.1.0",
+    "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
