--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "private": "true",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
+    "build:ssr": "webpack --config webpack.ssr.js",
     "watch": "webpack --mode=development --watch",
-    "dev": "webpack-dev-server --config webpack.dev.js --open"
+    "dev": "webpack-dev-server --config webpack.dev.js --open",
+    "dev:ssr": "node ./server/index.js"
   },
   "keywords": [
     "webpack",
@@ -31,6 +33,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^4.0.0",
+    "express": "^4.18.2",
     "glob": "^8.1.0",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.0",
