--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": "true",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
+    "build:stats": "webpack --config webpack.prod.js --json > stats.json",
     "build:ssr": "webpack --config webpack.ssr.js",
     "watch": "webpack --mode=development --watch",
     "dev": "webpack-dev-server --config webpack.dev.js --open",
@@ -48,6 +49,7 @@
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
